--- a/quski-oro-rest/src/main/resources/reportes/procesoCaducado.jrxml
+++ b/quski-oro-rest/src/main/resources/reportes/procesoCaducado.jrxml
@@ -97,7 +97,7 @@
 			<fieldDescription><![CDATA[codigSoftbank]]></fieldDescription>
 		</field>
 	</subDataset>
-	<parameter name="BEAN_DS" class="com.relative.quski.wrapper.ActaEntregaRecepcionWrapper"/>
+	<parameter name="LIST_DS" class="java.util.List"/>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
