--- a/quski-oro-rest/src/main/resources/reportes/ActaEntregaHerederos.jrxml
+++ b/quski-oro-rest/src/main/resources/reportes/ActaEntregaHerederos.jrxml
@@ -125,14 +125,17 @@
 				<text><![CDATA[Static Text]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="341" y="380" width="169" height="20" uuid="a5428771-2256-40b4-88d3-a2ab19861bc8"/>
+				<reportElement x="341" y="371" width="169" height="20" uuid="a5428771-2256-40b4-88d3-a2ab19861bc8"/>
 				<textElement>
 					<font fontName="Arial"/>
 				</textElement>
 				<text><![CDATA[Entrega Por: (Quski C.A.)]]></text>
 			</staticText>
 			<textField isStretchWithOverflow="true">
-				<reportElement positionType="Float" x="340" y="400" width="169" height="20" uuid="e286a6aa-db22-47ce-bd27-2988cbc04074"/>
+				<reportElement positionType="Float" x="340" y="422" width="169" height="20" uuid="e286a6aa-db22-47ce-bd27-2988cbc04074"/>
+				<box>
+					<topPen lineWidth="1.0"/>
+				</box>
 				<textElement textAlignment="Justified" markup="html">
 					<font fontName="Arial"/>
 				</textElement>
@@ -201,7 +204,7 @@
 				</jr:table>
 			</componentElement>
 			<textField isStretchWithOverflow="true">
-				<reportElement positionType="Float" x="340" y="420" width="169" height="20" uuid="6e27fa34-8458-4937-9a7e-806cb871e0a9"/>
+				<reportElement positionType="Float" x="340" y="442" width="169" height="20" uuid="6e27fa34-8458-4937-9a7e-806cb871e0a9"/>
 				<textElement textAlignment="Justified" markup="html">
 					<font fontName="Arial"/>
 				</textElement>
