--- a/quski-oro-rest/src/main/resources/reportes/ActaEntrega.jrxml
+++ b/quski-oro-rest/src/main/resources/reportes/ActaEntrega.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version last-->
+<!-- Created with Jaspersoft Studio version 6.6.0.final using JasperReports Library version 6.6.0  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="AdendaCP" pageWidth="595" pageHeight="842" columnWidth="511" leftMargin="42" rightMargin="42" topMargin="42" bottomMargin="42" uuid="0aca80b7-95f1-4f1d-bbe5-5064e8fb3526">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<property name="com.jaspersoft.studio.unit." value="pixel"/>
@@ -144,7 +144,10 @@
 				<textFieldExpression><![CDATA["CI: " +$P{BEAN_DS}.getCedulaCliente()]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="0" y="330" width="104" height="20" uuid="b0aea569-469b-4091-924b-6d65d2806600"/>
+				<reportElement x="0" y="365" width="240" height="20" uuid="b0aea569-469b-4091-924b-6d65d2806600"/>
+				<box>
+					<topPen lineWidth="1.0"/>
+				</box>
 				<textElement>
 					<font fontName="Arial"/>
 				</textElement>
@@ -158,14 +161,17 @@
 				<text><![CDATA[Entregado Por: (Quski C.A.)]]></text>
 			</staticText>
 			<textField isStretchWithOverflow="true">
-				<reportElement positionType="Float" x="260" y="420" width="230" height="20" uuid="e286a6aa-db22-47ce-bd27-2988cbc04074"/>
+				<reportElement positionType="Float" x="260" y="465" width="250" height="20" uuid="e286a6aa-db22-47ce-bd27-2988cbc04074"/>
+				<box>
+					<topPen lineWidth="1.0"/>
+				</box>
 				<textElement textAlignment="Justified" markup="html">
 					<font fontName="Arial"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{BEAN_DS}.getNombreAsesor() +"/Firma"]]></textFieldExpression>
 			</textField>
 			<rectangle>
-				<reportElement x="0" y="390" width="171" height="81" uuid="44d2297c-cd50-4f0a-b528-0302c7c16856"/>
+				<reportElement x="0" y="398" width="171" height="81" uuid="44d2297c-cd50-4f0a-b528-0302c7c16856"/>
 			</rectangle>
 			<staticText>
 				<reportElement x="0" y="497" width="104" height="20" uuid="5926639e-7796-4aba-be8a-86f609c58612"/>
