--- a/quski-oro-rest/src/main/resources/reportes/SolicitudDevolucionApoderado.jrxml
+++ b/quski-oro-rest/src/main/resources/reportes/SolicitudDevolucionApoderado.jrxml
@@ -11,6 +11,7 @@
 	<property name="com.jaspersoft.studio.unit.rightMargin" value="cm"/>
 	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<subDataset name="LIST_DS" uuid="724bf12e-3cdb-406d-a6d1-d138ebb030a6">
 		<queryString>
 			<![CDATA[]]>
@@ -278,7 +279,7 @@
 				<text><![CDATA[Static Text]]></text>
 			</staticText>
 			<frame>
-				<reportElement x="0" y="300" width="561" height="241" uuid="f7fca6da-b7e8-4c1f-899d-fc5d9ebf1518"/>
+				<reportElement x="0" y="300" width="561" height="280" uuid="f7fca6da-b7e8-4c1f-899d-fc5d9ebf1518"/>
 				<textField isStretchWithOverflow="true">
 					<reportElement positionType="Float" x="0" y="20" width="320" height="20" uuid="9a9285ab-68af-45c2-93e2-756fced1e2c6"/>
 					<textElement textAlignment="Justified" markup="html">
@@ -315,14 +316,14 @@
 					<text><![CDATA[HUELLA]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="16" y="215" width="104" height="20" uuid="4467ae4e-d56e-44b7-8e6e-baf50c01e0fe"/>
+					<reportElement x="16" y="246" width="104" height="20" uuid="4467ae4e-d56e-44b7-8e6e-baf50c01e0fe"/>
 					<textElement>
 						<font fontName="Arial"/>
 					</textElement>
 					<text><![CDATA[Firma]]></text>
 				</staticText>
 				<line>
-					<reportElement x="60" y="230" width="190" height="1" uuid="0a511b24-f15c-420b-a58f-51a679795da6"/>
+					<reportElement x="60" y="261" width="190" height="1" uuid="0a511b24-f15c-420b-a58f-51a679795da6"/>
 				</line>
 				<rectangle>
 					<reportElement x="330" y="10" width="171" height="81" uuid="54ce64c3-0f8b-4197-ab8a-ace510fc8d52"/>
@@ -351,8 +352,8 @@
 			</frame>
 			<staticText>
 				<reportElement positionType="Float" x="10" y="630" width="501" height="101" uuid="4717eb55-71f6-41d3-8375-6fb4756c117c"/>
-				<textElement>
-					<font fontName="Arial"/>
+				<textElement textAlignment="Justified">
+					<font fontName="Arial" size="11"/>
 				</textElement>
 				<text><![CDATA[Estimado Cliente, recuerde que la única persona autorizada a realizar el retiro es el titular o una persona debidamente autorizada a través de un poder legalizado.  El documento habilitante para el retiro de joya será la cédula de identidad original y copia a color.
 Tenga presente que una vez que su garantía se encuentre disponible para la entrega en la agencia asignada, tendrá 8 días laborables para su retiro.  Luego de lo cual la presente solicitud perderá validez.
@@ -363,11 +364,18 @@ Recuerde que el tiempo adicional de custodia de la garantía, que respalda su op
 				<reportElement positionType="Float" x="-1" y="590" width="511" height="1" uuid="b67b1e1f-1b8d-441c-a19b-53fc0e56ce51"/>
 			</line>
 			<staticText>
-				<reportElement positionType="Float" x="129" y="600" width="257" height="20" uuid="cefce311-476a-4259-b107-687d11d88171"/>
-				<textElement>
-					<font fontName="Arial" isBold="true" isUnderline="true"/>
+				<reportElement positionType="Float" mode="Opaque" x="10" y="600" width="501" height="20" backcolor="#BFBFBF" uuid="cefce311-476a-4259-b107-687d11d88171"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Arial" isBold="true" isUnderline="false"/>
 				</textElement>
-				<text><![CDATA[CONSIDERACIONES PARA EL RETORNO DE GARANTÍAS]]></text>
+				<text><![CDATA[CONSIDERACIONES PARA EL RETIRO DE LA GARANTÍA]]></text>
+			</staticText>
+			<staticText>
+				<reportElement positionType="Float" mode="Opaque" x="12" y="739" width="501" height="20" backcolor="#BFBFBF" uuid="4a418757-ef98-400f-9f94-eebd5ac96d03"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Arial" isBold="true" isUnderline="false"/>
+				</textElement>
+				<text><![CDATA[]]></text>
 			</staticText>
 		</band>
 	</title>
