--- a/quski-oro-rest/src/main/resources/reportes/SolicitudDevolucionHeredero.jrxml
+++ b/quski-oro-rest/src/main/resources/reportes/SolicitudDevolucionHeredero.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version last-->
+<!-- Created with Jaspersoft Studio version 6.6.0.final using JasperReports Library version 6.6.0  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="LiquidacionCD" pageWidth="595" pageHeight="842" columnWidth="511" leftMargin="42" rightMargin="42" topMargin="42" bottomMargin="42" uuid="bd61ad2f-9f25-415f-9c3b-33012cc4371a">
 	<property name="com.jaspersoft.studio.unit." value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.topMargin" value="cm"/>
@@ -285,27 +285,20 @@
 				</textElement>
 				<textFieldExpression><![CDATA[$P{BEAN_DS}.getNumeroFunda()]]></textFieldExpression>
 			</textField>
-			<staticText>
-				<reportElement positionType="Float" x="58" y="541" width="5" height="5" uuid="68ded4ba-bb63-4ae0-a8dd-c1ee0ed3296c"/>
-				<textElement>
-					<font fontName="Arial"/>
-				</textElement>
-				<text><![CDATA[Static Text]]></text>
-			</staticText>
 			<line>
 				<reportElement positionType="Float" x="-1" y="590" width="511" height="1" uuid="c45e6455-923e-4551-96c5-3874d30223f9"/>
 			</line>
 			<staticText>
-				<reportElement positionType="Float" x="129" y="600" width="257" height="20" uuid="0ec64830-ac29-4066-889f-4dbea7bcedce"/>
-				<textElement>
-					<font fontName="Arial" isBold="true" isUnderline="true"/>
+				<reportElement positionType="Float" mode="Opaque" x="10" y="600" width="500" height="20" backcolor="#BFBFBF" uuid="0ec64830-ac29-4066-889f-4dbea7bcedce"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Arial" size="11" isBold="true" isUnderline="false"/>
 				</textElement>
-				<text><![CDATA[CONSIDERACIONES PARA EL RETORNO DE GARANTÍAS]]></text>
+				<text><![CDATA[CONSIDERACIONES PARA EL RETIRO DE LA GARANTÍA]]></text>
 			</staticText>
 			<staticText>
 				<reportElement positionType="Float" x="10" y="630" width="501" height="101" uuid="3f1ae3a0-2707-460e-aee0-bbba927f253d"/>
-				<textElement>
-					<font fontName="Arial"/>
+				<textElement textAlignment="Justified">
+					<font fontName="Arial" size="11"/>
 				</textElement>
 				<text><![CDATA[Estimado Cliente, recuerde que la única persona autorizada a realizar el retiro es el titular o una persona debidamente autorizada a través de un poder legalizado.  El documento habilitante para el retiro de joya será la cédula de identidad original y copia a color.
 Tenga presente que una vez que su garantía se encuentre disponible para la entrega en la agencia asignada, tendrá 8 días laborables para su retiro.  Luego de lo cual la presente solicitud perderá validez.
@@ -375,7 +368,7 @@ Recuerde que el tiempo adicional de custodia de la garantía, que respalda su op
 				</jr:table>
 			</componentElement>
 			<staticText>
-				<reportElement positionType="Float" x="36" y="495" width="104" height="20" uuid="7afbbfb2-b391-4e1d-a6ca-1e48f9ca4110"/>
+				<reportElement positionType="Float" x="36" y="534" width="104" height="20" uuid="7afbbfb2-b391-4e1d-a6ca-1e48f9ca4110"/>
 				<textElement>
 					<font fontName="Arial"/>
 				</textElement>
@@ -396,8 +389,15 @@ Recuerde que el tiempo adicional de custodia de la garantía, que respalda su op
 				<text><![CDATA[Tramitado Por: (Quski C.A.)]]></text>
 			</staticText>
 			<line>
-				<reportElement positionType="Float" x="70" y="510" width="190" height="1" uuid="4a4baa30-ec0c-4b0d-87d4-44f82479708d"/>
+				<reportElement positionType="Float" x="70" y="549" width="190" height="1" uuid="4a4baa30-ec0c-4b0d-87d4-44f82479708d"/>
 			</line>
+			<staticText>
+				<reportElement positionType="Float" mode="Opaque" x="10" y="730" width="500" height="20" backcolor="#BFBFBF" uuid="21104929-6db8-493a-b314-ca03fb9eb487"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Arial" size="11" isBold="true" isUnderline="false"/>
+				</textElement>
+				<text><![CDATA[]]></text>
+			</staticText>
 		</band>
 	</title>
 </jasperReport>
