--- a/quski-oro-rest/src/main/resources/reportes/ActaEntrega.jrxml
+++ b/quski-oro-rest/src/main/resources/reportes/ActaEntrega.jrxml
@@ -86,7 +86,7 @@
 		<fieldDescription><![CDATA[nombreAgente]]></fieldDescription>
 	</field>
 	<title>
-		<band height="517" splitType="Stretch">
+		<band height="600" splitType="Stretch">
 			<staticText>
 				<reportElement x="150" y="20" width="300" height="16" uuid="423f258f-f251-42f2-aa61-9245599f1358"/>
 				<textElement>
@@ -103,13 +103,13 @@
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="1" y="44" width="509" height="85" uuid="caf4b55a-1e91-461a-a75d-cf1bffeaa1ea"/>
-				<textElement>
+				<textElement textAlignment="Justified">
 					<font fontName="Arial"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{BEAN_DS}.getCiudad() +", "+ $P{BEAN_DS}.getFechaDevolucion() + ", por solicitud expresa y escrita del cliente señor (a) " +$P{BEAN_DS}.getNombreCompletoCliente()+ ", se procede a la entrega de la funda " + $P{BEAN_DS}.getNumeroFunda()  + " sin alteraciones de ninguna naturaleza y en las mismas condiciones recibidas inicialmente; joyas que garantizaban la operación de crédito " + $P{BEAN_DS}.getNumeroOperacion() +", misma que se encuentra cancelada."]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="19" y="481" width="5" height="5" uuid="13dbc615-8ee3-41ae-b5f1-99acb1ad8167"/>
+				<reportElement x="19" y="520" width="5" height="5" uuid="13dbc615-8ee3-41ae-b5f1-99acb1ad8167"/>
 				<textElement>
 					<font fontName="Arial"/>
 				</textElement>
@@ -123,63 +123,69 @@
 				<text><![CDATA[Recibo conforme:]]></text>
 			</staticText>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement positionType="Float" x="1" y="260" width="320" height="20" uuid="751ce859-6da6-4599-972b-4e2070347e35"/>
-				<textElement textAlignment="Justified" markup="html">
-					<font fontName="Arial"/>
-				</textElement>
-				<textFieldExpression><![CDATA["Fecha: " +$P{BEAN_DS}.getFechaDevolucion()+"."]]></textFieldExpression>
-			</textField>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement positionType="Float" x="1" y="283" width="320" height="20" uuid="46c7f39f-c488-47aa-ad17-e0924de2ff0d"/>
+				<reportElement positionType="Float" x="0" y="351" width="330" height="20" uuid="46c7f39f-c488-47aa-ad17-e0924de2ff0d"/>
 				<textElement textAlignment="Justified" markup="html">
 					<font fontName="Arial"/>
 				</textElement>
 				<textFieldExpression><![CDATA["NOMBRE CLIENTE: " +$P{BEAN_DS}.getNombreCompletoCliente()]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement positionType="Float" x="0" y="302" width="320" height="20" uuid="49955c4f-7456-4476-a74d-3b9fb511cea7"/>
+				<reportElement positionType="Float" x="2" y="380" width="328" height="20" uuid="49955c4f-7456-4476-a74d-3b9fb511cea7"/>
 				<textElement textAlignment="Justified" markup="html">
 					<font fontName="Arial"/>
 				</textElement>
 				<textFieldExpression><![CDATA["CI: " +$P{BEAN_DS}.getCedulaCliente()]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="0" y="365" width="240" height="20" uuid="b0aea569-469b-4091-924b-6d65d2806600"/>
-				<box>
-					<topPen lineWidth="1.0"/>
-				</box>
-				<textElement>
-					<font fontName="Arial"/>
-				</textElement>
-				<text><![CDATA[Firma]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="260" y="390" width="169" height="20" uuid="a5428771-2256-40b4-88d3-a2ab19861bc8"/>
+				<reportElement x="0" y="580" width="169" height="20" uuid="a5428771-2256-40b4-88d3-a2ab19861bc8"/>
 				<textElement>
 					<font fontName="Arial"/>
 				</textElement>
 				<text><![CDATA[Entregado Por: (Quski C.A.)]]></text>
 			</staticText>
-			<textField isStretchWithOverflow="true">
-				<reportElement positionType="Float" x="260" y="465" width="250" height="20" uuid="e286a6aa-db22-47ce-bd27-2988cbc04074"/>
-				<box>
-					<topPen lineWidth="1.0"/>
-				</box>
-				<textElement textAlignment="Justified" markup="html">
-					<font fontName="Arial"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$P{BEAN_DS}.getNombreAsesor() +"/Firma"]]></textFieldExpression>
-			</textField>
 			<rectangle>
-				<reportElement x="0" y="398" width="171" height="81" uuid="44d2297c-cd50-4f0a-b528-0302c7c16856"/>
+				<reportElement x="360" y="310" width="120" height="89" uuid="44d2297c-cd50-4f0a-b528-0302c7c16856"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="0" y="497" width="104" height="20" uuid="5926639e-7796-4aba-be8a-86f609c58612"/>
+				<reportElement x="360" y="410" width="110" height="20" uuid="5926639e-7796-4aba-be8a-86f609c58612"/>
 				<textElement>
 					<font fontName="Arial"/>
 				</textElement>
 				<text><![CDATA[HUELLA]]></text>
 			</staticText>
+			<textField isStretchWithOverflow="true">
+				<reportElement style="Table_TH" positionType="Float" mode="Transparent" x="2" y="320" width="258" height="20" uuid="a99ed540-4579-4470-a189-2b0f46778c14"/>
+				<box>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#FFFFFF"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Justified" markup="html">
+					<font fontName="Arial"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Fecha: " +$P{BEAN_DS}.getFechaDevolucion()+"."]]></textFieldExpression>
+			</textField>
+			<textField isStretchWithOverflow="true">
+				<reportElement style="Table_TH" positionType="Float" mode="Transparent" x="-1" y="470" width="250" height="20" uuid="1d2066d5-ed7b-4545-bd70-019cad2382fd"/>
+				<box>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#FFFFFF"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Justified" markup="rtf">
+					<font fontName="Arial"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Entregado Por: (Quski C.A.)"]]></textFieldExpression>
+			</textField>
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+				<reportElement positionType="Float" x="-1" y="500" width="330" height="20" uuid="887b0564-a49a-4d84-b1a6-f7459bf4ff61"/>
+				<textElement textAlignment="Justified" markup="html">
+					<font fontName="Arial"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{BEAN_DS}.getNombreAsesor()]]></textFieldExpression>
+			</textField>
 		</band>
 	</title>
 </jasperReport>
