--- a/quski-oro-rest/src/main/resources/reportes/ActaEntregaApoderado.jrxml
+++ b/quski-oro-rest/src/main/resources/reportes/ActaEntregaApoderado.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.6.0.final using JasperReports Library version 6.6.0  -->
+<!-- Created with Jaspersoft Studio version last-->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="AdendaCP" pageWidth="595" pageHeight="842" columnWidth="511" leftMargin="42" rightMargin="42" topMargin="42" bottomMargin="42" uuid="0aca80b7-95f1-4f1d-bbe5-5064e8fb3526">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<property name="com.jaspersoft.studio.unit." value="pixel"/>
@@ -86,7 +86,7 @@
 		<fieldDescription><![CDATA[nombreAgente]]></fieldDescription>
 	</field>
 	<title>
-		<band height="600" splitType="Stretch">
+		<band height="757" splitType="Stretch">
 			<staticText>
 				<reportElement x="129" y="18" width="300" height="16" uuid="423f258f-f251-42f2-aa61-9245599f1358"/>
 				<textElement>
@@ -120,7 +120,7 @@
 				<textFieldExpression><![CDATA["Para constancia de lo actuado firman las partes en unidad de acto," +$P{BEAN_DS}.getCiudad() +", "+ $P{BEAN_DS}.getFechaDevolucion()]]></textFieldExpression>
 			</textField>
 			<frame>
-				<reportElement positionType="Float" x="0" y="300" width="510" height="180" uuid="d4c9ddea-d359-4118-940a-3d5f57ccb9de"/>
+				<reportElement positionType="Float" x="0" y="300" width="510" height="200" uuid="d4c9ddea-d359-4118-940a-3d5f57ccb9de"/>
 				<box>
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -135,28 +135,27 @@
 					<text><![CDATA[Recibo conforme:]]></text>
 				</staticText>
 				<textField isStretchWithOverflow="true">
-					<reportElement positionType="Float" x="0" y="67" width="230" height="20" uuid="46c7f39f-c488-47aa-ad17-e0924de2ff0d"/>
+					<reportElement positionType="Float" x="0" y="67" width="320" height="20" uuid="46c7f39f-c488-47aa-ad17-e0924de2ff0d"/>
+					<box>
+						<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#FFFFFF"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					</box>
 					<textElement textAlignment="Justified" markup="html">
 						<font fontName="Arial"/>
 					</textElement>
 					<textFieldExpression><![CDATA["SR.(A) " +$P{BEAN_DS}.getNombreApoderado()]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true">
-					<reportElement positionType="Float" x="1" y="98" width="229" height="20" uuid="49955c4f-7456-4476-a74d-3b9fb511cea7"/>
+					<reportElement positionType="Float" x="1" y="98" width="319" height="20" uuid="49955c4f-7456-4476-a74d-3b9fb511cea7"/>
 					<textElement textAlignment="Justified" markup="html">
 						<font fontName="Arial"/>
 					</textElement>
 					<textFieldExpression><![CDATA["<b> CI: </b> " +$P{BEAN_DS}.getCedulaApoderado()]]></textFieldExpression>
 				</textField>
 				<staticText>
-					<reportElement x="324" y="0" width="180" height="20" uuid="994ed4a6-42e3-4902-b4fc-edaff554d3fe"/>
-					<textElement>
-						<font fontName="Arial" isBold="true"/>
-					</textElement>
-					<text><![CDATA[ Entrega Por : (Quski C.A. )]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="0" y="117" width="210" height="20" uuid="5bd7fafc-ed99-405e-b13f-b6574a2cbcbe"/>
+					<reportElement x="0" y="117" width="320" height="20" uuid="5bd7fafc-ed99-405e-b13f-b6574a2cbcbe"/>
 					<textElement>
 						<font fontName="Arial" isBold="false"/>
 					</textElement>
@@ -164,43 +163,62 @@
 ]]></text>
 				</staticText>
 				<textField isStretchWithOverflow="true">
-					<reportElement positionType="Float" x="0" y="147" width="230" height="20" uuid="7f5b7131-dcbd-4d60-ad5b-2dea02d183c3"/>
+					<reportElement positionType="Float" x="0" y="147" width="320" height="20" uuid="7f5b7131-dcbd-4d60-ad5b-2dea02d183c3"/>
 					<textElement textAlignment="Justified" markup="html">
 						<font fontName="Arial"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$P{BEAN_DS}.getNombreCompletoCliente()]]></textFieldExpression>
 				</textField>
 				<staticText>
-					<reportElement x="289" y="68" width="53" height="20" uuid="2ab834ad-534d-45c1-8519-119351046efb"/>
+					<reportElement x="2" y="279" width="60" height="20" uuid="2ab834ad-534d-45c1-8519-119351046efb"/>
+					<box>
+						<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#FFFFFF"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					</box>
 					<textElement>
 						<font fontName="Arial" isBold="true"/>
 					</textElement>
 					<text><![CDATA[ASESOR:]]></text>
 				</staticText>
 				<textField>
-					<reportElement x="343" y="68" width="166" height="20" uuid="a768ad8f-455a-4d1d-9438-3a7f2b5e48e6"/>
+					<reportElement x="62" y="279" width="289" height="20" uuid="a768ad8f-455a-4d1d-9438-3a7f2b5e48e6"/>
+					<box>
+						<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#FFFFFF"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					</box>
 					<textElement>
 						<font isBold="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$P{BEAN_DS}.getNombreAsesor()]]></textFieldExpression>
 				</textField>
 				<staticText>
-					<reportElement x="289" y="88" width="50" height="20" uuid="98729033-ef7c-4141-9f49-f2b5b1b2e874"/>
+					<reportElement x="4" y="309" width="50" height="20" uuid="98729033-ef7c-4141-9f49-f2b5b1b2e874"/>
 					<textElement>
 						<font fontName="Arial" isBold="true"/>
 					</textElement>
 					<text><![CDATA[CI:]]></text>
 				</staticText>
+				<rectangle>
+					<reportElement x="331" y="16" width="140" height="122" uuid="5eb4ffd5-c405-49b3-8a4a-a992372929d8"/>
+				</rectangle>
+				<staticText>
+					<reportElement x="331" y="148" width="104" height="20" uuid="beb2e3ea-5b3d-497f-b751-553c819953e5"/>
+					<textElement>
+						<font fontName="Arial" isBold="false"/>
+					</textElement>
+					<text><![CDATA[HUELLA]]></text>
+				</staticText>
 			</frame>
-			<rectangle>
-				<reportElement x="0" y="490" width="171" height="81" uuid="5eb4ffd5-c405-49b3-8a4a-a992372929d8"/>
-			</rectangle>
 			<staticText>
-				<reportElement x="0" y="580" width="104" height="20" uuid="beb2e3ea-5b3d-497f-b751-553c819953e5"/>
+				<reportElement x="0" y="530" width="180" height="20" uuid="994ed4a6-42e3-4902-b4fc-edaff554d3fe"/>
 				<textElement>
-					<font fontName="Arial" isBold="false"/>
+					<font fontName="Arial" isBold="true"/>
 				</textElement>
-				<text><![CDATA[HUELLA]]></text>
+				<text><![CDATA[ Entrega Por : (Quski C.A. )]]></text>
 			</staticText>
 		</band>
 	</title>
